--- a/iOSVouchedWebview/Base.lproj/LaunchScreen.storyboard
+++ b/iOSVouchedWebview/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,10 +14,31 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.10000000149011612" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leap1" translatesAutoresizingMaskIntoConstraints="NO" id="xgA-XU-Bg1">
+                                <rect key="frame" x="28" y="257.66666666666669" width="337" height="337.00000000000006"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xgA-XU-Bg1" secondAttribute="height" multiplier="1:1" id="UNx-Vt-PUF"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="JYB-dg-uie">
+                                <rect key="frame" x="66.666666666666686" y="397" width="260" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="NsN-Ka-61F"/>
+                                    <constraint firstAttribute="width" constant="260" id="aeU-xD-BhQ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" name="Primary"/>
+                        <constraints>
+                            <constraint firstItem="xgA-XU-Bg1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="3k1-oW-Ny3"/>
+                            <constraint firstItem="xgA-XU-Bg1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="FAx-Ya-0uQ"/>
+                            <constraint firstItem="JYB-dg-uie" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="KY7-Iw-y72"/>
+                            <constraint firstItem="JYB-dg-uie" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gEi-fC-9ZO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +46,11 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Leap1" width="337" height="307"/>
+        <image name="Logo" width="260" height="57.666667938232422"/>
+        <namedColor name="Primary">
+            <color red="0.31372549019607843" green="0.27843137254901962" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
